// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`step-functions instrument step function logging disabled creates step function log group, subscribes it to forwarder, and adds it to step function logging config 1`] = `
"
Will apply the following changes:

Changes for arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction
tagResource ->
{
  \\"resourceArn\\": \\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",
  \\"tags\\": [
    {
      \\"key\\": \\"dd_sls_ci\\",
      \\"value\\": \\"v2.0.0\\"
    }
  ]
}
createLogGroup ->
{
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs\\"
}
putSubscriptionFilter ->
{
  \\"destinationArn\\": \\"arn:aws:lambda:us-east-1:000000000000:function:DatadogForwarder\\",
  \\"filterName\\": \\"ExampleStepFunctionLogGroupSubscription\\",
  \\"filterPattern\\": \\"\\",
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs\\"
}
updateStateMachine ->
{
  \\"loggingConfiguration\\": {
    \\"level\\": \\"OFF\\",
    \\"includeExecutionData\\": false
  }
}
--->
{
  \\"loggingConfiguration\\": {
    \\"destinations\\": [
      {
        \\"cloudWatchLogsLogGroup\\": {
          \\"logGroupArn\\": \\"arn:aws:logs:us-east-1:000000000000:log-group:/aws/vendedlogs/states/ExampleStepFunction-Logs:*\\"
        }
      }
    ],
    \\"level\\": \\"ALL\\",
    \\"includeExecutionData\\": true
  }
}
"
`;

exports[`step-functions instrument step function logging enabled subscribes log group in step function logging config to forwarder 1`] = `
"
Will apply the following changes:

Changes for arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction
tagResource ->
{
  \\"resourceArn\\": \\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",
  \\"tags\\": [
    {
      \\"key\\": \\"dd_sls_ci\\",
      \\"value\\": \\"v2.0.0\\"
    }
  ]
}
putSubscriptionFilter ->
{
  \\"destinationArn\\": \\"arn:aws:lambda:us-east-1:000000000000:function:DatadogForwarder\\",
  \\"filterName\\": \\"ExampleStepFunctionLogGroupSubscription\\",
  \\"filterPattern\\": \\"\\",
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs-test\\"
}
"
`;

exports[`step-functions instrument step function tags sets dd_sls_ci tag if changed 1`] = `
"
Will apply the following changes:

Changes for arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction
tagResource ->
{
  \\"resourceArn\\": \\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",
  \\"tags\\": [
    {
      \\"key\\": \\"dd_sls_ci\\",
      \\"value\\": \\"v2.0.0\\"
    }
  ]
}
putSubscriptionFilter ->
{
  \\"destinationArn\\": \\"arn:aws:lambda:us-east-1:000000000000:function:DatadogForwarder\\",
  \\"filterName\\": \\"ExampleStepFunctionLogGroupSubscription\\",
  \\"filterPattern\\": \\"\\",
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs-test\\"
}
"
`;

exports[`step-functions instrument step function tags sets dd_sls_ci tag if not already set 1`] = `
"
Will apply the following changes:

Changes for arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction
tagResource ->
{
  \\"resourceArn\\": \\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",
  \\"tags\\": [
    {
      \\"key\\": \\"dd_sls_ci\\",
      \\"value\\": \\"v2.0.0\\"
    }
  ]
}
putSubscriptionFilter ->
{
  \\"destinationArn\\": \\"arn:aws:lambda:us-east-1:000000000000:function:DatadogForwarder\\",
  \\"filterName\\": \\"ExampleStepFunctionLogGroupSubscription\\",
  \\"filterPattern\\": \\"\\",
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs-test\\"
}
"
`;

exports[`step-functions instrument step function tags sets env tag if not already set 1`] = `
"
Will apply the following changes:

Changes for arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction
tagResource ->
{
  \\"resourceArn\\": \\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",
  \\"tags\\": [
    {
      \\"key\\": \\"env\\",
      \\"value\\": \\"test\\"
    }
  ]
}
putSubscriptionFilter ->
{
  \\"destinationArn\\": \\"arn:aws:lambda:us-east-1:000000000000:function:DatadogForwarder\\",
  \\"filterName\\": \\"ExampleStepFunctionLogGroupSubscription\\",
  \\"filterPattern\\": \\"\\",
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs-test\\"
}
"
`;

exports[`step-functions instrument step function tags sets service tag if not already set 1`] = `
"
Will apply the following changes:

Changes for arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction
tagResource ->
{
  \\"resourceArn\\": \\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",
  \\"tags\\": [
    {
      \\"key\\": \\"service\\",
      \\"value\\": \\"test-service\\"
    }
  ]
}
putSubscriptionFilter ->
{
  \\"destinationArn\\": \\"arn:aws:lambda:us-east-1:000000000000:function:DatadogForwarder\\",
  \\"filterName\\": \\"ExampleStepFunctionLogGroupSubscription\\",
  \\"filterPattern\\": \\"\\",
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs-test\\"
}
"
`;

exports[`stepfunctions instrument test step function logging disabled creates step function log group, subscribes it to forwarder, and adds it to step function logging config 1`] = `
"
{\\"$metadata\\":{},\\"stateMachineArn\\":\\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",\\"name\\":\\"ExampleStepFunction\\",\\"definition\\":\\"\\",\\"loggingConfiguration\\":{\\"level\\":\\"OFF\\",\\"includeExecutionData\\":false},\\"roleArn\\":\\"arn:aws:iam::000000000000:role/ExampleStepFunctionRole\\",\\"type\\":\\"STANDARD\\",\\"creationDate\\":\\"2023-03-08T00:00:00.000Z\\"}

{\\"tags\\":[{\\"key\\":\\"env\\",\\"value\\":\\"test\\"}]}

Will apply the following change:
==============================
Changes for arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction

CreateLogGroup: 
{
  \\"logGroupName\\": \\"/aws/vendedlogs/states/ExampleStepFunction-Logs\\"
}

4444444444444444444444
"
`;

exports[`stepfunctions instrument test step function logging enabled subscribes log group in step function logging config to forwarder 1`] = `
"
{\\"$metadata\\":{},\\"stateMachineArn\\":\\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",\\"name\\":\\"ExampleStepFunction\\",\\"definition\\":\\"\\",\\"loggingConfiguration\\":{\\"level\\":\\"ALL\\",\\"includeExecutionData\\":true,\\"destinations\\":[{\\"cloudWatchLogsLogGroup\\":{\\"logGroupArn\\":\\"arn:aws:logs:us-east-1:000000000000:log-group:/aws/vendedlogs/states/ExampleStepFunction-Logs-test:*\\"}}]},\\"roleArn\\":\\"arn:aws:iam::000000000000:role/ExampleStepFunctionRole\\",\\"type\\":\\"STANDARD\\",\\"creationDate\\":\\"2023-03-08T00:00:00.000Z\\"}

{\\"tags\\":[{\\"key\\":\\"env\\",\\"value\\":\\"test\\"}]}

No change is applied.
 "
`;

exports[`stepfunctions instrument test step function tags sets dd_sls_ci tag if changed 1`] = `
"
{\\"$metadata\\":{},\\"stateMachineArn\\":\\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",\\"name\\":\\"ExampleStepFunction\\",\\"definition\\":\\"\\",\\"loggingConfiguration\\":{\\"level\\":\\"ALL\\",\\"includeExecutionData\\":true,\\"destinations\\":[{\\"cloudWatchLogsLogGroup\\":{\\"logGroupArn\\":\\"arn:aws:logs:us-east-1:000000000000:log-group:/aws/vendedlogs/states/ExampleStepFunction-Logs-test:*\\"}}]},\\"roleArn\\":\\"arn:aws:iam::000000000000:role/ExampleStepFunctionRole\\",\\"type\\":\\"STANDARD\\",\\"creationDate\\":\\"2023-03-08T00:00:00.000Z\\"}

{\\"tags\\":[{\\"key\\":\\"env\\",\\"value\\":\\"test\\"},{\\"key\\":\\"dd_sls_ci\\",\\"value\\":\\"v1.0.0\\"}]}

No change is applied.
 "
`;

exports[`stepfunctions instrument test step function tags sets dd_sls_ci tag if not already set 1`] = `
"
{\\"$metadata\\":{},\\"stateMachineArn\\":\\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",\\"name\\":\\"ExampleStepFunction\\",\\"definition\\":\\"\\",\\"loggingConfiguration\\":{\\"level\\":\\"ALL\\",\\"includeExecutionData\\":true,\\"destinations\\":[{\\"cloudWatchLogsLogGroup\\":{\\"logGroupArn\\":\\"arn:aws:logs:us-east-1:000000000000:log-group:/aws/vendedlogs/states/ExampleStepFunction-Logs-test:*\\"}}]},\\"roleArn\\":\\"arn:aws:iam::000000000000:role/ExampleStepFunctionRole\\",\\"type\\":\\"STANDARD\\",\\"creationDate\\":\\"2023-03-08T00:00:00.000Z\\"}

{\\"tags\\":[{\\"key\\":\\"env\\",\\"value\\":\\"test\\"}]}

No change is applied.
 "
`;

exports[`stepfunctions instrument test step function tags sets env tag if not already set 1`] = `
"
{\\"$metadata\\":{},\\"stateMachineArn\\":\\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",\\"name\\":\\"ExampleStepFunction\\",\\"definition\\":\\"\\",\\"loggingConfiguration\\":{\\"level\\":\\"ALL\\",\\"includeExecutionData\\":true,\\"destinations\\":[{\\"cloudWatchLogsLogGroup\\":{\\"logGroupArn\\":\\"arn:aws:logs:us-east-1:000000000000:log-group:/aws/vendedlogs/states/ExampleStepFunction-Logs-test:*\\"}}]},\\"roleArn\\":\\"arn:aws:iam::000000000000:role/ExampleStepFunctionRole\\",\\"type\\":\\"STANDARD\\",\\"creationDate\\":\\"2023-03-08T00:00:00.000Z\\"}

{\\"tags\\":[{\\"key\\":\\"dd_sls_ci\\",\\"value\\":\\"v2.0.0\\"}]}

No change is applied.
 "
`;

exports[`stepfunctions instrument test step function tags sets service tag if not already set 1`] = `
"
{\\"$metadata\\":{},\\"stateMachineArn\\":\\"arn:aws:states:us-east-1:000000000000:stateMachine:ExampleStepFunction\\",\\"name\\":\\"ExampleStepFunction\\",\\"definition\\":\\"\\",\\"loggingConfiguration\\":{\\"level\\":\\"ALL\\",\\"includeExecutionData\\":true,\\"destinations\\":[{\\"cloudWatchLogsLogGroup\\":{\\"logGroupArn\\":\\"arn:aws:logs:us-east-1:000000000000:log-group:/aws/vendedlogs/states/ExampleStepFunction-Logs-test:*\\"}}]},\\"roleArn\\":\\"arn:aws:iam::000000000000:role/ExampleStepFunctionRole\\",\\"type\\":\\"STANDARD\\",\\"creationDate\\":\\"2023-03-08T00:00:00.000Z\\"}

{\\"tags\\":[{\\"key\\":\\"env\\",\\"value\\":\\"test\\"},{\\"key\\":\\"dd_sls_ci\\",\\"value\\":\\"v2.0.0\\"}]}

No change is applied.
 "
`;
